--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://MrShadow2.github.io/my-app",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
     "firebase": "^9.20.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
